[gd_scene load_steps=35 format=3 uid="uid://jouq5h65e6r"]

[ext_resource type="Script" path="res://Scripts/Managers/GameManager.gd" id="1_b1n4j"]
[ext_resource type="PackedScene" uid="uid://cup1dkh5844gj" path="res://Scenes/EnemyTypes/Bandits/Standard/Topspawns/red_bandit_enemy_topspawn_y.tscn" id="2_na785"]
[ext_resource type="PackedScene" uid="uid://c7q06ed5tngrs" path="res://Scenes/EnemyTypes/Bandits/Standard/Topspawns/red_bandit_enemy_topspawn_x.tscn" id="3_1v4do"]
[ext_resource type="PackedScene" uid="uid://w53t7853qd3e" path="res://Scenes/Collectibles/green_moola.tscn" id="4_6r1u1"]
[ext_resource type="PackedScene" uid="uid://mheqo4c4rvyj" path="res://Scenes/EnemyTypes/Bandits/Standard/Topspawns/red_bandit_enemy_2_topspawn_y.tscn" id="4_sl0rx"]
[ext_resource type="PackedScene" uid="uid://wvk1s2cu8gpm" path="res://Scenes/Collectibles/health_pickup.tscn" id="5_7lxek"]
[ext_resource type="PackedScene" uid="uid://cx0b3l805x0rc" path="res://Scenes/Collectibles/blue_moola.tscn" id="6_lmtm3"]
[ext_resource type="PackedScene" uid="uid://bc0iwwy5ej8xg" path="res://Scenes/Collectibles/red_moola.tscn" id="7_5166w"]
[ext_resource type="PackedScene" uid="uid://ckbu88kp4002a" path="res://Scenes/EnemyTypes/Bosses/red_bandit_disk_boss.tscn" id="8_8f36a"]
[ext_resource type="PackedScene" uid="uid://mo0pgjfnimyk" path="res://Scenes/Collectibles/datakey.tscn" id="9_vw270"]
[ext_resource type="PackedScene" uid="uid://yfsad70u8ibk" path="res://Scenes/UI/hud.tscn" id="10_q26ag"]
[ext_resource type="PackedScene" uid="uid://dshm0ml172ysd" path="res://Scenes/UI/pause_menu.tscn" id="11_eal1b"]
[ext_resource type="PackedScene" uid="uid://wf480iyhglux" path="res://Scenes/UI/game_over_menu.tscn" id="12_ejx12"]
[ext_resource type="PackedScene" uid="uid://caxy4iq6q5mi2" path="res://Scenes/Sound/music.tscn" id="13_ungq7"]
[ext_resource type="PackedScene" uid="uid://cq6uf1dq0h6ed" path="res://Scenes/Backgrounds/scrolling_background.tscn" id="14_t074w"]
[ext_resource type="Shader" path="res://Assets/Materials/ColourChange.gdshader" id="15_prvja"]
[ext_resource type="FontFile" uid="uid://bn8ixkqxgo7du" path="res://Assets/Fonts/8bitOperatorPlus-Bold.ttf" id="16_eie4x"]
[ext_resource type="Script" path="res://Scripts/EnemyTypes/EnemyPath1Node.gd" id="17_o762t"]
[ext_resource type="PackedScene" uid="uid://cnpfvspijyli5" path="res://Scenes/EnemyTypes/Paths/PathedEnemy/RedBanditScoutPath2.tscn" id="19_ei0po"]
[ext_resource type="PackedScene" uid="uid://bsy3062e7psov" path="res://Scenes/EnemyTypes/Paths/PathedEnemy/PathedBosses/Boss_Suspicious_Rock.tscn" id="19_yl3gi"]
[ext_resource type="Texture2D" uid="uid://dcykx2pr50vxl" path="res://Assets/Artwork/Backgrounds/Backgrounds_0000s_0002_Cosmos2.png" id="20_4dtyn"]
[ext_resource type="Texture2D" uid="uid://cl3mim5x8561n" path="res://Assets/Artwork/Backgrounds/Backgrounds_0000s_0003_Cosmos.png" id="21_jfsos"]
[ext_resource type="Texture2D" uid="uid://dmg8detufujto" path="res://Assets/Artwork/Backgrounds/Backgrounds_0000s_0004_MistPatch.png" id="22_yye2f"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x5hwq"]
shader = ExtResource("15_prvja")
shader_parameter/custom_color = Color(1, 1, 1, 0.654902)

[sub_resource type="Curve" id="Curve_gk5at"]
min_value = -360.0
max_value = 360.0
_data = [Vector2(0, -4.61755), 0.0, 0.0, 0, 0, Vector2(0.385475, -91.3254), 0.0, 0.0, 0, 0, Vector2(0.717877, -106.888), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uan7o"]
shader = ExtResource("15_prvja")
shader_parameter/custom_color = Color(0, 1, 1, 0.552941)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_y2ynt"]
shader = ExtResource("15_prvja")
shader_parameter/custom_color = Color(0.26, 1, 0.26, 0.588235)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ba7pe"]
shader = ExtResource("15_prvja")
shader_parameter/custom_color = Color(1, 0.28, 0.28, 0.533333)

[sub_resource type="Curve2D" id="Curve2D_xrgcs"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -47, -5.7883, -72, 0, 72, 0, 200, 179.212, -66, 0, 66, 0, 331, 35.2117, -86, 8, 86, -8, 501, 189.212, 0, 0, 0, 0, 701, 3.2117)
}
point_count = 5

[sub_resource type="Curve2D" id="Curve2D_1w8cs"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 740, -55, 0, 0, 0, 0, 659, -58, 0, 0, 0, 0, 586, -56, 30.3048, 10.7865, -30.3048, -10.7865, 477, -59, -9.24553, 16.4365, 9.24553, -16.4365, 423, -110, -15.9229, -3.08184, 15.9229, 3.08184, 510, -149, -12.841, 0, 12.841, 0, 532, -115, -6.67733, 19.5183, 6.67733, -19.5183, 576, -144, 22.0865, 5.65005, -22.0865, -5.65005, 566, -200, 26.1957, -3.59548, -26.1957, 3.59548, 496, -201, 26.1957, -6.16369, -26.1957, 6.16369, 435, -168, 1.02728, -20.5456, -1.02728, 20.5456, 358, -142, 0, 0, 0, 0, 383, -74, 0, 29.2775, 0, -29.2775, 321, -2, 15.4092, 20.5456, -15.4092, -20.5456, 312, -95, -4.10913, 21.5729, 4.10913, -21.5729, 234, -143, 20.5456, 29.7912, -20.5456, -29.7912, 311, -205, 26.1957, -0.513641, -26.1957, 0.513641, 196, -228, 51.8777, 1.54092, -51.8777, -1.54092, 114, -195, 26.7093, -8.73189, -26.7093, 8.73189, 35, -238, -1.54092, -17.4638, 1.54092, 17.4638, 2, -150, -14.8956, -1.54092, 14.8956, 1.54092, 68, -78, -13.8683, -1.02728, 13.8683, 1.02728, 103, -131, 0, -17.4638, 0, 17.4638, 183, -69, 7.70461, -14.8956, -7.70461, 14.8956, 135, 9, 28.7639, -19.0047, -28.7639, 19.0047, 46, 14, 0, 0, 0, 0, -62, 69)
}
point_count = 27

[sub_resource type="ShaderMaterial" id="ShaderMaterial_h4i3t"]
shader = ExtResource("15_prvja")
shader_parameter/custom_color = Color(1, 1, 1, 0.188235)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7covv"]
shader = ExtResource("15_prvja")
shader_parameter/custom_color = Color(0.171726, 0.785771, 0.695658, 0.447059)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1fyke"]
shader = ExtResource("15_prvja")
shader_parameter/custom_color = Color(0.144253, 0.549857, 0.928399, 0.623529)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jwjuj"]
shader = ExtResource("15_prvja")
shader_parameter/custom_color = Color(0.160857, 0.490754, 0.532018, 0.407843)

[node name="Level" type="Node2D"]
script = ExtResource("1_b1n4j")
bg_scroll_speed = 6
bg_scroll_speed2 = 80
bg_scroll_speed3 = 19
bg_scroll_speed4 = 13
enemy_scenes = Array[PackedScene]([ExtResource("2_na785"), ExtResource("3_1v4do")])
enemy_spawn_timer = 4
max_enemies = 1000
enemy_scenes2 = Array[PackedScene]([ExtResource("4_sl0rx")])
max_enemies2 = 5
moola_scenes = Array[PackedScene]([ExtResource("4_6r1u1"), ExtResource("5_7lxek"), ExtResource("6_lmtm3"), ExtResource("7_5166w")])
moola_spawn_timer = 3
boss_scene = ExtResource("8_8f36a")
data_key = ExtResource("9_vw270")

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="EnemySpawnTimer2" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[node name="MoolaSpawnTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="playerSpawn" type="Marker2D" parent="."]
position = Vector2(298, 307)

[node name="ProjectileContainer" type="Node2D" parent="."]

[node name="EnemyContainer" type="Node2D" parent="."]

[node name="DataKeyContainer" type="Node2D" parent="."]

[node name="EnemyContainer2" type="Node2D" parent="."]

[node name="BossContainer" type="Node2D" parent="."]

[node name="MoolaContainer" type="Node2D" parent="."]

[node name="Music" parent="." instance=ExtResource("13_ungq7")]

[node name="ScrollingBackground" parent="." instance=ExtResource("14_t074w")]

[node name="Stars" type="CPUParticles2D" parent="."]
material = SubResource("ShaderMaterial_x5hwq")
position = Vector2(358, -38)
scale = Vector2(1, 5)
amount = 200
lifetime = 10.0
preprocess = 84.85
speed_scale = 0.1
explosiveness = 0.12
randomness = 0.41
lifetime_randomness = 0.98
emission_shape = 3
emission_rect_extents = Vector2(400, 1)
spread = 0.0
gravity = Vector2(2.08165e-12, 1000)
angle_min = 87.3
angle_max = 167.3
angle_curve = SubResource("Curve_gk5at")
scale_amount_min = 1.5
scale_amount_max = 4.0

[node name="StarsBlue" type="CPUParticles2D" parent="."]
visible = false
material = SubResource("ShaderMaterial_uan7o")
position = Vector2(358, -38)
scale = Vector2(1, 5)
amount = 50
lifetime = 10.0
preprocess = 84.85
speed_scale = 0.15
explosiveness = 0.12
randomness = 0.41
lifetime_randomness = 0.98
emission_shape = 3
emission_rect_extents = Vector2(400, 1)
spread = 0.0
gravity = Vector2(2.08165e-12, 1000)
angle_min = 87.3
angle_max = 167.3
angle_curve = SubResource("Curve_gk5at")
scale_amount_min = 1.5
scale_amount_max = 3.5

[node name="StarsGreen" type="CPUParticles2D" parent="."]
material = SubResource("ShaderMaterial_y2ynt")
position = Vector2(358, -38)
scale = Vector2(1, 5)
amount = 50
lifetime = 10.0
preprocess = 84.85
speed_scale = 0.25
explosiveness = 0.12
randomness = 0.41
lifetime_randomness = 0.98
emission_shape = 3
emission_rect_extents = Vector2(400, 1)
spread = 0.0
gravity = Vector2(2.08165e-12, 1000)
angle_min = 87.3
angle_max = 167.3
angle_curve = SubResource("Curve_gk5at")
scale_amount_min = 1.5
scale_amount_max = 3.0

[node name="StarsRed" type="CPUParticles2D" parent="."]
visible = false
material = SubResource("ShaderMaterial_ba7pe")
position = Vector2(358, -38)
scale = Vector2(1, 5)
amount = 50
lifetime = 10.0
preprocess = 84.85
speed_scale = 0.2
explosiveness = 0.12
randomness = 0.41
lifetime_randomness = 0.98
emission_shape = 3
emission_rect_extents = Vector2(400, 1)
spread = 0.0
gravity = Vector2(2.08165e-12, 1000)
angle_min = 87.3
angle_max = 167.3
angle_curve = SubResource("Curve_gk5at")
scale_amount_min = 1.5
scale_amount_max = 3.0

[node name="BossTimer" type="Timer" parent="."]
wait_time = 50.0
one_shot = true
autostart = true

[node name="BossSpawn" type="Marker2D" parent="."]
position = Vector2(331, -136)

[node name="BossCanvas" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="BossCanvas"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="BossCanvas/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -306.0
offset_top = 18.0
offset_right = 322.0
offset_bottom = 89.0
grow_horizontal = 2
scale = Vector2(0.399113, 0.568756)
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 7
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("16_eie4x")
theme_override_font_sizes/font_size = 50
text = "U.F.NO"

[node name="EnemyFrequencyTimer2" type="Timer" parent="."]
wait_time = 3.0

[node name="Paths" type="Node2D" parent="."]

[node name="Add a path_follow_2d_template" type="Path2D" parent="."]
position = Vector2(0, 51.7883)
curve = SubResource("Curve2D_xrgcs")
script = ExtResource("17_o762t")
activation_time = 15.0
deactivation_time = 15.0
subject = ExtResource("19_ei0po")

[node name="EnemyPath1ActivationTimer" type="Timer" parent="Add a path_follow_2d_template"]
wait_time = 15.0
one_shot = true
autostart = true

[node name="EnemyPath1DeactivationTimer" type="Timer" parent="Add a path_follow_2d_template"]
wait_time = 15.0
one_shot = true

[node name="BossPath" type="Node2D" parent="."]

[node name="Boss" type="Path2D" parent="BossPath"]
position = Vector2(14, 257)
curve = SubResource("Curve2D_1w8cs")
script = ExtResource("17_o762t")
subject = ExtResource("19_yl3gi")
is_boss = true

[node name="EnemyPath1ActivationTimer" type="Timer" parent="BossPath/Boss"]
wait_time = 10.0
one_shot = true
autostart = true

[node name="EnemyPath1DeactivationTimer" type="Timer" parent="BossPath/Boss"]
wait_time = 10.0
one_shot = true

[node name="ScrollingBackground2" type="ParallaxBackground" parent="."]
layer = -96

[node name="ParallaxLayer" type="ParallaxLayer" parent="ScrollingBackground2"]
material = SubResource("ShaderMaterial_h4i3t")
motion_mirroring = Vector2(2.08165e-12, 400)

[node name="Stars" type="Sprite2D" parent="ScrollingBackground2/ParallaxLayer"]
texture_repeat = 2
material = SubResource("ShaderMaterial_7covv")
texture = ExtResource("20_4dtyn")
centered = false

[node name="ScrollingBackground3" type="ParallaxBackground" parent="."]
layer = -94

[node name="ParallaxLayer" type="ParallaxLayer" parent="ScrollingBackground3"]
motion_mirroring = Vector2(2.08165e-12, 400)

[node name="Stars" type="Sprite2D" parent="ScrollingBackground3/ParallaxLayer"]
texture_repeat = 2
material = SubResource("ShaderMaterial_1fyke")
texture = ExtResource("21_jfsos")
centered = false

[node name="ScrollingBackground4" type="ParallaxBackground" parent="."]
layer = -95
visible = false

[node name="ParallaxLayer" type="ParallaxLayer" parent="ScrollingBackground4"]
motion_mirroring = Vector2(2.08165e-12, 400)

[node name="Stars" type="Sprite2D" parent="ScrollingBackground4/ParallaxLayer"]
texture_repeat = 2
material = SubResource("ShaderMaterial_jwjuj")
texture = ExtResource("22_yye2f")
centered = false

[node name="GeneralUI" type="CanvasLayer" parent="."]

[node name="HUD" parent="GeneralUI" instance=ExtResource("10_q26ag")]

[node name="PauseMenu" parent="GeneralUI" instance=ExtResource("11_eal1b")]
visible = false

[node name="GameOverMenu" parent="GeneralUI" instance=ExtResource("12_ejx12")]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[connection signal="isBossSignal" from="." to="BossPath/Boss" method="_on_level_is_boss_signal"]
[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
[connection signal="timeout" from="EnemySpawnTimer2" to="." method="_on_enemy_spawn_timer2_timeout"]
[connection signal="timeout" from="MoolaSpawnTimer" to="." method="_on_moola_spawn_timer_timeout"]
[connection signal="timeout" from="BossTimer" to="." method="_on_boss_timer_timeout"]
[connection signal="timeout" from="EnemyFrequencyTimer2" to="." method="_on_enemy_frequency_timer2_timeout"]
[connection signal="timeout" from="Add a path_follow_2d_template/EnemyPath1ActivationTimer" to="Add a path_follow_2d_template" method="_on_enemy_path_1_activation_timer_timeout"]
[connection signal="timeout" from="Add a path_follow_2d_template/EnemyPath1DeactivationTimer" to="Add a path_follow_2d_template" method="_on_enemy_path_1_deactivation_timer_timeout"]
[connection signal="defeatPass" from="BossPath/Boss" to="." method="_spawn_data_core"]
[connection signal="timeout" from="BossPath/Boss/EnemyPath1ActivationTimer" to="BossPath/Boss" method="_on_enemy_path_1_activation_timer_timeout"]
[connection signal="timeout" from="BossPath/Boss/EnemyPath1DeactivationTimer" to="BossPath/Boss" method="_on_enemy_path_1_deactivation_timer_timeout"]
[connection signal="game_unpaused" from="GeneralUI/PauseMenu" to="." method="_on_pause_menu_game_unpaused"]
[connection signal="redirect_quit" from="GeneralUI/PauseMenu" to="." method="_on_pause_menu_redirect_quit"]
[connection signal="restart" from="GeneralUI/GameOverMenu" to="." method="_on_game_over_menu_restart"]
[connection signal="toMainMenu" from="GeneralUI/GameOverMenu" to="." method="_on_game_over_menu_to_main_menu"]
